--- a/_data/updates.yml
+++ b/_data/updates.yml
@@ -25,3 +25,6 @@
 -
   filename: 'Bitlab-Writeup'
   lastmod: '2021-03-03 15:18:23 +0200'
+-
+  filename: 'FunboxEasyEnum-Writeup'
+  lastmod: '2021-06-01 09:09:56 +0200'
