--- a/_data/updates.yml
+++ b/_data/updates.yml
@@ -26,5 +26,8 @@
   filename: 'Bitlab-Writeup'
   lastmod: '2021-03-03 15:18:23 +0200'
 -
+  filename: 'African-Digital-Forensics-CTF-Week-1'
+  lastmod: '2021-06-02 17:01:12 +0200'
+-
   filename: 'FunboxEasyEnum-Writeup'
   lastmod: '2021-06-01 11:33:20 +0200'
