African Digital Forensics CTF - Week 2 update

--- a/_data/updates.yml
+++ b/_data/updates.yml
@@ -11,6 +11,9 @@
   filename: 'Monteverde-Writeup'
   lastmod: '2021-03-03 15:19:01 +0200'
 -
+  filename: 'African-Digital-Forensics-CTF-Week-2'
+  lastmod: '2021-06-03 13:51:19 +0200'
+-
   filename: 'eJPT-Exam'
   lastmod: '2021-01-30 11:55:57 +0200'
 -
