--- a/_data/updates.yml
+++ b/_data/updates.yml
@@ -11,6 +11,9 @@
   filename: 'Monteverde-Writeup'
   lastmod: '2021-03-03 15:19:01 +0200'
 -
+  filename: 'hashcat-prepend-rules'
+  lastmod: '2021-06-04 12:13:15 +0200'
+-
   filename: 'African-Digital-Forensics-CTF-Week-2'
   lastmod: '2021-06-03 14:30:31 +0200'
 -
