--- a/_data/updates.yml
+++ b/_data/updates.yml
@@ -35,5 +35,8 @@
   filename: 'African-Digital-Forensics-CTF-Week-1'
   lastmod: '2021-06-03 12:06:33 +0200'
 -
+  filename: 'African-Digital-Forensics-CTF-Week-4'
+  lastmod: '2021-06-08 10:07:41 +0200'
+-
   filename: 'FunboxEasyEnum-Writeup'
   lastmod: '2021-06-01 11:33:20 +0200'
