Tenet Writeup post

--- a/_data/updates.yml
+++ b/_data/updates.yml
@@ -2,6 +2,9 @@
   filename: 'Traverxec-Writeup'
   lastmod: '2021-03-03 15:18:23 +0200'
 -
+  filename: 'Tenet-Writeup'
+  lastmod: '2021-06-14 14:17:53 +0200'
+-
   filename: 'Resolute-Writeup'
   lastmod: '2021-03-03 15:18:23 +0200'
 -
