--- a/_data/updates.yml
+++ b/_data/updates.yml
@@ -23,6 +23,9 @@
   filename: 'African-Digital-Forensics-CTF-Week-2'
   lastmod: '2021-06-03 14:30:31 +0200'
 -
+  filename: 'SweettoothINC-Writeup'
+  lastmod: '2021-08-02 08:47:43 +0200'
+-
   filename: 'eJPT-Exam'
   lastmod: '2021-01-30 11:55:57 +0200'
 -
